# AniFlow

./: .env.sample  .gitignore  Cargo.toml  README.md  aniflow.py  anilist.py  common.py  qbittorrent.py  reddit.py  requirements.txt
aniflow/: __main__.py  anilist.py  common.py  github.py  prompt.py  qbittorrent.py  reddit.py  tmdb.py
src/: main.rs
