[package]
name = "aniflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_derive = "1.0.144"
serde = { version = "1.0", features = ["derive"] }
open = "3.0.3"
inquire = "0.3.0"